Name:                htiled
Version:             0.0.1
Synopsis:            Import from the Tiled map editor.
License:             BSD3
License-file:        LICENSE
Author:              Christian Rødli Amble
Maintainer:          cra+code@cra.no
Category:            Game
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Hs-Source-Dirs:    src
  Exposed-Modules:   Data.Tiled, Data.Tiled.Types, Data.Tiled.Load
  Build-depends:     base ==4.*, zlib ==0.5.*, bytestring ==0.9.*, hxt ==9.1.*,
                     base64-bytestring ==0.1.*, filepath ==1.2.*, containers ==0.4.*
  Ghc-Options:       -Wall
